NetBSD Problem Report #40246

From martin@aprisoft.de  Sun Dec 21 15:38:43 2008
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id A38ED63B121
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 21 Dec 2008 15:38:43 +0000 (UTC)
Message-Id: <20081221153836.0B333AF580E@emmas.aprisoft.de>
Date: Sun, 21 Dec 2008 16:38:36 +0100 (CET)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@gnats.NetBSD.org
Subject: current panics when removing swap devices
X-Send-Pr-Version: 3.95

>Number:         40246
>Category:       kern
>Synopsis:       current panics when removing swap devices
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 21 15:40:01 +0000 2008
>Closed-Date:    Sun Feb 08 09:16:19 +0000 2009
>Last-Modified:  Sun Feb 08 09:16:19 +0000 2009
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.5
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD martins.aprisoft.de 5.99.5 NetBSD 5.99.5 (MARTINS) #29: Sat Dec 20 17:03:45 CET 2008 martin@martins.aprisoft.de:/usr/src/sys/arch/amd64/compile/MARTINS amd64
Architecture: x86_64
Machine: amd64
>Description:

I have this filesystems:
/dev/wd0a on / type ffs (log, NFS exported, local)
kernfs on /kern type kernfs (local)
procfs on /proc type procfs (local)
ptyfs on /dev/pts type ptyfs (local)

When I "shutdown -r now" the machine, it panics:

Stopping inetd.
Removing block-type swap devices
panic: kernel diagnostic assertion "vp->v_specmountpoint != NULL" failed: file "../../../../ufs/ffs/ffs_vnops.c", line 414
fatal breakpoint trap in supervisor mode                          
trap type 1 code 0 rip ffffffff80152825 cs 8 rflags 246 cr2  7f7ffd9e6912 cpl 0 rsp ffff80004e72e710
Stopped in pid 347.1 (swapctl) at       netbsd:breakpoint+0x5:  leave
db{0}> bt                                                            
breakpoint() at netbsd:breakpoint+0x5
panic() at netbsd:panic+0x24d        
__kernassert() at netbsd:__kernassert+0x2d
ffs_full_fsync() at netbsd:ffs_full_fsync+0x495
ffs_fsync() at netbsd:ffs_fsync+0x6c           
VOP_FSYNC() at netbsd:VOP_FSYNC+0x71
vinvalbuf() at netbsd:vinvalbuf+0xf6
spec_close() at netbsd:spec_close+0x8c
VOP_CLOSE() at netbsd:VOP_CLOSE+0x62  
sys_swapctl() at netbsd:sys_swapctl+0x6e7
syscall() at netbsd:syscall+0xb6         



>How-To-Repeat:
s/a
>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Andrew Doran <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40246 CVS commit: src/sys/ufs/ffs
Date: Mon, 22 Dec 2008 11:46:33 +0000 (UTC)

 Module Name:	src
 Committed By:	ad
 Date:		Mon Dec 22 11:46:33 UTC 2008

 Modified Files:
 	src/sys/ufs/ffs: ffs_vnops.c

 Log Message:
 PR kern/40246 current panics when removing swap devices

 Someone was smoking crack when they decided to unconditionally OR FSYNC_VFS
 into the flags for block devices.


 To generate a diff of this commit:
 cvs rdiff -r1.105 -r1.106 src/sys/ufs/ffs/ffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40246 CVS commit: [netbsd-5] src/sys/ufs/ffs
Date: Mon,  2 Feb 2009 21:14:50 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Mon Feb  2 21:14:50 UTC 2009

 Modified Files:
 	src/sys/ufs/ffs [netbsd-5]: ffs_vnops.c

 Log Message:
 Pull up following revision(s) (requested by ad in ticket #395):
 	sys/ufs/ffs/ffs_vnops.c: revision 1.106
 PR kern/40246 current panics when removing swap devices
 Someone was smoking crack when they decided to unconditionally OR FSYNC_VFS
 into the flags for block devices.


 To generate a diff of this commit:
 cvs rdiff -r1.104.4.1 -r1.104.4.2 src/sys/ufs/ffs/ffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 08 Feb 2009 06:22:11 +0000
State-Changed-Why:
Fixed?


State-Changed-From-To: feedback->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 08 Feb 2009 09:16:19 +0000
State-Changed-Why:
fixed quite some time ago


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.