Pull up following revision(s) (requested by ad in ticket #395): 	sys/ufs/ffs/ffs_vnops.c: revision 1.106 PR kern/40246 current panics when removing swap devices Someone was smoking crack when they decided to unconditionally OR FSYNC_VFS into the flags for block devices.